logs/cloudshell-firewall-core.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Inject-3.3.1.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/api'...
Compiling './lib/python3.5/site-packages/cloudshell/api/common_cloudshell_api.py'...
***   File "./lib/python3.5/site-packages/cloudshell/api/common_cloudshell_api.py", line 120
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/configuration'...
Listing './lib/python3.5/site-packages/cloudshell/core'...
Listing './lib/python3.5/site-packages/cloudshell/core/context'...
Listing './lib/python3.5/site-packages/cloudshell/core/logger'...
Compiling './lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py'...
***   File "./lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py", line 285
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/firewall'...
Listing './lib/python3.5/site-packages/cloudshell/firewall/autoload'...
Listing './lib/python3.5/site-packages/cloudshell/firewall/autoload/model'...
Listing './lib/python3.5/site-packages/cloudshell/firewall/operations'...
Listing './lib/python3.5/site-packages/cloudshell/firewall/operations/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/helpers/scripts'...
Compiling './lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py'...
***   File "./lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py", line 101
    print 'No config file found at:', filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudshell/shell'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/dependency_injection'...
Listing './lib/python3.5/site-packages/cloudshell/tests'...
Listing './lib/python3.5/site-packages/cloudshell/tests/driver_bootstrap'...
Listing './lib/python3.5/site-packages/cloudshell_automation_api-7.0.0.132.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_core-2.1.153.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_firewall_core-1.0.8.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_shell_core-2.1.205.egg-info'...
Listing './lib/python3.5/site-packages/ipcalc-1.1.3.egg-info'...
Compiling './lib/python3.5/site-packages/ipcalc.py'...
***   File "./lib/python3.5/site-packages/ipcalc.py", line 237
    if ip > 0xffffffffffffffffffffffffffffffffL:
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonpickle'...
Listing './lib/python3.5/site-packages/jsonpickle/ext'...
Listing './lib/python3.5/site-packages/jsonpickle-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/core/logger'...
Listing './lib/python3.5/site-packages/tests/core/logger/config'...
Listing './share'...
Listing './share/python-wheels'...
